# smart-home-assistant

./: .gitattributes  .gitignore  README.md  sdkconfig.defaults  smart-home-assistant.code-workspace
components/json_builder/: CMakeLists.txt  json_builder.c
components/led_control/: CMakeLists.txt  led_control.c
components/mqtt_handler/: CMakeLists.txt  mqtt_handler.c
components/mqtt_handler/include/: mqtt_handler.h
components/sensor_dht11/: CMakeLists.txt
components/sensor_mq2/: sensor_mq2.c
components/sensor_mq4/: CMakeLists.txt  sensor_mq4.c
components/sensor_sht40/: CMakeLists.txt  sensor_sht40.c
components/sensor_sht40/include/: sensor_sht40.h
components/sensor_yl38/: CMakeLists.txt  sensor_yl38.c
components/sensor_yl38/include/: sensor_yl38.h
edge/: main.py  main_demo.py
edge/config/: settings.yaml
edge/config/rules/: safety_rules.yaml
edge/llm/: enhanced_multimodal_agent.py  flask_server_enhanced.py  llm_client.py  multimodal_agent.py  stream_llm_client.py
edge/mqtt/: broker_client.py
edge/rule_engine/: engine.py  test_rule_engine.py
edge/scripts/: convert_yolo_to_rknn.py
edge/storage/: data_bus.py  database.py
edge/test/: acceptance_test_integration.py  stability_monitor.py  test_phase3_rknn.py
edge/vision/: analyzer.py  cam_receiver.py  detector.py  test_vision.py  verify_stream.py  vision_service.py
edge/voice/: interruptible_voice.py  voice_module.py
esp32/: CMakeLists.txt
esp32/components/adc_shared/: CMakeLists.txt  adc_shared.c
esp32/components/adc_shared/include/: adc_shared.h
esp32/components/json_builder/include/: json_builder.h
esp32/components/led_control/include/: led_control.h
esp32/components/mqtt_handler/: CMakeLists.txt
esp32/components/mqtt_handler/include/: mqtt_handler.h
esp32/components/pin_config/include/: pin_config.h
esp32/components/sensor_dht11/: sensor_dht11.c
esp32/components/sensor_mq2/: CMakeLists.txt
esp32/components/sensor_mq2/include/: sensor_mq2.h
esp32/components/sensor_yl38/: sensor_yl38.c
esp32/components/sensor_yl38/include/: sensor_yl38.h
esp32/components/time_sync/: CMakeLists.txt  time_sync.c
esp32/components/time_sync/include/: time_sync.h
esp32/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
esp32/scripts/: create_components.sh
esp32cam/: CMakeLists.txt  partitions.csv
esp32cam/main/: CMakeLists.txt  app_main.c  camera_init.c  camera_init.h  http_stream.c  http_stream.h  mqtt_cam.c  mqtt_cam.h
esp32cam/scripts/: gen_sdkconfig.py
main/: CMakeLists.txt  app_main.c  dht11.c  dht11.h  idf_component.yml  mq4.c  mq4.h  pin_config.h  yl38.c  yl38.h
